remove overflow-y and fixed nav

--- a/css/style.css
+++ b/css/style.css
@@ -5,10 +5,6 @@
     box-sizing: border-box;
     font-family: 'Rubik Mono One', sans-serif;
 }
-html{
-    overflow-y: hidden;
-}
-
 /* Utilities */
 .container{
     margin: 0 auto;
@@ -67,8 +63,9 @@ nav{
     width: 250px;
     height: 100px;
     margin-right: 30px;
-    position: fixed;
+    position: absolute;
     z-index: 1;
+  
     top: 0;
     right: 0;
     
